# games

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  common.cpp  docker-compose.yml  main.cpp  undelined_test.cpp
.cargo/: config.toml
.fleet/: settings.json
rock_paper_scissors/: rps.cpp
simple_checkers/: simple_checkers.cpp
src/: colors.rs  main.rs  tic_tac_toe.rs
tic_tac_toe/: test.cpp  test2.cpp  tic_tac_toe.cpp  tic_tac_toe_2p.cpp  tic_tac_toe_remaster.cpp  utext.cpp
